<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" >

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/hint_name"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imageView"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText2"
                app:layout_constraintStart_toEndOf="@+id/editText" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:hint="@string/hint_lastname"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imageView"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editText3"
                android:hint="@string/hint_email" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/editText"
                app:layout_constraintStart_toStartOf="@+id/editText"
                app:layout_constraintEnd_toEndOf="@+id/editText2"/>
        <TextView
                android:text="@string/hint_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/editText3"
                app:layout_constraintStart_toStartOf="@+id/editText3"
                app:layout_constraintEnd_toEndOf="@+id/editText3"/>
        <RadioGroup
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="@+id/textView2" android:id="@+id/radioGroup">
            <RadioButton
                    android:text="@string/gender_male"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" android:id="@+id/radioButton" android:layout_weight="1"
                    android:checked="false"/>
            <RadioButton
                    android:text="@string/gender_female"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" android:id="@+id/radioButton2" android:layout_weight="1"/>
        </RadioGroup>
        <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/editText5"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/radioGroup" android:hint="@string/hint_code"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/editText6"
                app:layout_constraintStart_toEndOf="@+id/editText5" android:layout_marginStart="8dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                app:layout_constraintEnd_toEndOf="@+id/radioGroup" android:hint="@string/hint_phone"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText7"
                android:hint="@string/hint_password" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/editText5"
                app:layout_constraintStart_toStartOf="@+id/editText5"
                app:layout_constraintEnd_toEndOf="@+id/editText6"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText8"
                android:hint="@string/hint_confirm_password" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/editText7"
                app:layout_constraintStart_toStartOf="@+id/editText7"
                app:layout_constraintEnd_toEndOf="@+id/editText7"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="147dp"
                android:inputType="textMultiLine"
                android:gravity="start|top"
                android:ems="10"
                android:id="@+id/editText9"
                android:hint="@string/hint_bio" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/editText8"
                app:layout_constraintStart_toStartOf="@+id/editText8"
                app:layout_constraintEnd_toEndOf="@+id/editText8"/>
        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp" tools:srcCompat="@drawable/ic_indicator_avatar"
                android:id="@+id/imageView" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/ic_indicator_avatar"/>
    </android.support.constraint.ConstraintLayout>

</ScrollView>